Changing the documented routes so that there's not a double /api
